# tribuchet

./: Cargo.toml  DESIGN.md  README.md  TODO.md  flake.nix  result-1
.github/: dependabot.yml
.github/scripts/e2e/: fetch-artifact.sh  hub-build.sh  hub-start.sh  probe-fod.nix  probe.nix  run.py  worker-run.sh
.github/workflows/: auto-merge.yml  e2e-tailscale.yml  e2e.yml  gc.yml
crates/sandbox-proto/: Cargo.toml
crates/sandbox-proto/src/: darwin.rs  framing.rs  lib.rs  linux.rs
crates/tribuchet/: Cargo.toml  build.rs
crates/tribuchet-sandboxd/: Cargo.toml
crates/tribuchet-sandboxd/src/: idmap.rs  lease.rs  main.rs  pool.rs
crates/tribuchet/proto/: tribuchet.proto
crates/tribuchet/src/: attach.rs  build_json.rs  ca.rs  chunkio.rs  config.rs  fsutil.rs  hub.rs  main.rs  nar.rs  netpolicy.rs  proto.rs  rt.rs  sd.rs  store.rs  tailscale.rs  tmptar.rs  worker.rs
crates/tribuchet/src/hub/: metrics.rs  relay.rs  state.rs  submit.rs
crates/tribuchet/src/worker/: agent.rs  agents.rs  binfmt.rs  build.rs  caps.rs  cgroup.rs  imports.rs  logtail.rs  nsresourced.rs  reaper.rs  resume.rs  sandbox.rs  sandboxd.rs
crates/tribuchet/src/worker/sandbox/: darwin.rs  linux.rs
crates/tribuchet/tests/: e2e.rs
docs/: staging.als
nix/: darwin-module.nix  nixos-module.nix  nspawn-container.nix  nsresourced.nix  package.nix  test-nsresourced.nix  test-rootless.nix  test-tailscale.nix  test.nix  treefmt.nix
nix/patches/: 0001-isolation-Drop-UID-GID-after-joining-an-existing-use.patch  0002-pasta-Open-netns-watch-directory-before-dropping-cre.patch  external-builders-decline-fallback.patch  external-builders-uid-range.patch  recursive-nix-external-builders.patch
nix/tests/: ca.nix  cancel.nix  cross.nix  drain.nix  fod-dns.nix  fod-policy.nix  fod.nix  impure.nix  kvm.nix  logbomb.nix  par.nix  passasfile.nix  recursive.nix  refgraph.nix  reload.nix  restrictedperms.nix  singleuid-rootless.nix  singleuid.nix  slowlog.nix  stop.nix  structured.nix  uidrange-rootless.nix  uidrange.nix
