[workspace]
members = ["crates/tribuchet", "crates/sandbox-proto", "crates/tribuchet-sandboxd"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }
doc_markdown = "allow"

[workspace.dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
hex = "0.4"
hyper-util = "0.1"
rustix = { version = "1", features = ["mount", "process"] }
nix = { version = "0.31", features = ["dir", "mount", "sched", "user", "fs", "hostname", "signal", "process", "resource", "personality", "socket", "uio"] }
libc = "0.2"
prost = "0.14"
rand = "0.10"
rcgen = { version = "0.14", features = ["x509-parser"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "1.1"
sha2 = "0.11"
tar = "0.4"
tempfile = "3"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time", "net", "io-util", "signal"] }
tokio-stream = "0.1"
tonic = { version = "0.14", features = ["tls-ring"] }
tonic-prost = "0.14"
tonic-prost-build = "0.14"
tower = "0.5"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
time = "0.3"
zstd = "0.13"
futures-util = "0.3"
async-compression = { version = "0.4", features = ["tokio", "zstd"] }
tokio-util = { version = "0.7", features = ["io"] }
bytes = "1"
harmonia-file-nar = { git = "https://github.com/nix-community/harmonia", rev = "d5201ff458c273438901d9a61ca2d659946e67f8" }
harmonia-store-path = { git = "https://github.com/nix-community/harmonia", rev = "d5201ff458c273438901d9a61ca2d659946e67f8" }
harmonia-store-path-info = { git = "https://github.com/nix-community/harmonia", rev = "d5201ff458c273438901d9a61ca2d659946e67f8" }
harmonia-utils-signature = { git = "https://github.com/nix-community/harmonia", rev = "d5201ff458c273438901d9a61ca2d659946e67f8" }
harmonia-store-remote = { git = "https://github.com/nix-community/harmonia", rev = "d5201ff458c273438901d9a61ca2d659946e67f8" }
harmonia-store-ref-scan = { git = "https://github.com/nix-community/harmonia", rev = "d5201ff458c273438901d9a61ca2d659946e67f8" }
