[package]
name = "tribuchet-sandboxd"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
clap.workspace = true
libc.workspace = true
nix.workspace = true
sandbox-proto = { path = "../sandbox-proto" }
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
sd-notify = "0.5"

[dev-dependencies]
tempfile.workspace = true

[lints]
workspace = true
