[package]
name = "tribuchet"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
clap.workspace = true
ed25519-dalek.workspace = true
prost.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tokio-stream.workspace = true
tonic.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
zstd.workspace = true

[target.'cfg(target_os = "linux")'.dependencies]
nix.workspace = true

[build-dependencies]
tonic-build.workspace = true
