[package]
name = "tribuchet"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
async-stream.workspace = true
clap.workspace = true
ed25519-dalek.workspace = true
hex.workspace = true
hyper-util.workspace = true
prost.workspace = true
rand.workspace = true
rcgen.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
tar.workspace = true
tokio.workspace = true
tokio-stream = { workspace = true, features = ["net"] }
tonic.workspace = true
tower.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
zstd.workspace = true
nix.workspace = true

[dev-dependencies]
tempfile.workspace = true

[build-dependencies]
tonic-build.workspace = true
