[package]
name = "tribuchet"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
clap.workspace = true
hex.workspace = true
hyper-util.workspace = true
prost.workspace = true
rand.workspace = true
rcgen.workspace = true
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
sha2.workspace = true
tar.workspace = true
tokio.workspace = true
tokio-stream = { workspace = true, features = ["net"] }
tonic.workspace = true
tonic-prost.workspace = true
tower.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
time.workspace = true
zstd.workspace = true
nix.workspace = true
libc.workspace = true
sandbox-proto = { path = "../sandbox-proto" }
futures-util.workspace = true
async-compression.workspace = true
tokio-util.workspace = true
bytes.workspace = true
harmonia-file-nar.workspace = true
harmonia-store-path.workspace = true
harmonia-store-path-info.workspace = true
harmonia-utils-signature.workspace = true
harmonia-store-remote.workspace = true
harmonia-store-ref-scan.workspace = true
sd-notify = "0.5.0"
tempfile.workspace = true

[target.'cfg(target_os = "linux")'.dependencies]
# User-mode NAT datapath for fixed-output build network isolation.
presto-pasta = "0.0.4"

[features]
# Gates the NixOS e2e harness (tests/e2e.rs). It drives VMs over the test
# driver's vsock ssh backdoor, so plain `cargo test` neither builds nor runs it.
e2e = []

[[test]]
name = "e2e"
required-features = ["e2e"]

[dev-dependencies]

[build-dependencies]
tonic-prost-build.workspace = true

[lints]
workspace = true
